<?xml version="1.0"?>
<package>
  <name>lane_follow</name>
  <version>0.0.0</version>
  <description>
      Package for lane detection and lane following
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="raadkhan023@gmail.com">Raad</maintainer>
  <maintainer email="leri.ratu@gmail.com">Valerian</maintainer>
  <maintainer email="gellis@alumni.ubc.ca">Gareth</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sb_utils</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>vision</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sb_utils</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>vision</run_depend>
   
</package>
