<?xml version="1.0"?>
<package format="2">
  <name>pathfinding_igvc</name>
  <version>0.0.0</version>
  <description>The pathfinding_igvc package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="william@todo.todo">william</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sb_utils</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
